[package]
publish = false
name = "shared"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
anyhow.workspace = true
candid.workspace = true
derive_more = { workspace = true, features = [
    "as_ref",
    "display",
    "from",
    "into",
] }
dotenvy_macro = "0.15.7"
heck = "0.5.0"
ic-cdk = "0.15.0"
ic-stable-structures = "0.6"
js-sys.workspace = true
mime.workspace = true
nestify.workspace = true
num-rational.workspace = true
num-traits.workspace = true
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
serde.workspace = true
thiserror.workspace = true
urlencoding = "2.1.3"

[dev-dependencies]
serde_json = "1.0"
bincode = "1.3"

[features]
wasm-bindgen = []
